--- a/buisness_card/index.html
+++ b/buisness_card/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Buisness Card</title>
-    <link rel="stylesheet" href="./challenge_10.css"/>
+    <link rel="stylesheet" href="./index.css"/>
 </head>
 <body>
 
